opam-version: "2.0"
name: "satysfi-figbox-doc"
version: "0.1.3"
synopsis: "Document for satysfi-figbox package"
description: """
A SATySFi package that creates charts and places them in inappropriate positions in your document
"""
maintainer: "Mogami Shinichi <mogassy@yahoo.co.jp>"
authors: "Mogami Shinichi <mogassy@yahoo.co.jp>"
license: "MIT" # Choose what you want
homepage: "https://github.com/monaqa/satysfi-figbox"
dev-repo: "git+https://github.com/monaqa/satysfi-figbox.git"
bug-reports: "https://github.com/monaqa/satysfi-figbox/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-figbox" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-base"
  "satysfi-easytable" {>= "1.0.0"}
  "satysfi-enumitem" {>= "2.0.0"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "figbox-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "figbox-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
