opam-version: "2.0"
name: "satysfi-figbox"
version: "0.1.0"
synopsis: "A Great SATySFi Package"
description: """
Brilliant description comes here.
"""
maintainer: "Your name <email@example.com>"
authors: "Your name <email@example.com>"
license: "MIT"
homepage: "https://github.com/<github-username>/satysfi-figbox"
dev-repo: "git+https://github.com/<github-username>/satysfi-figbox.git"
bug-reports: "https://github.com/<github-username>/satysfi-figbox/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
  "satysfi-base"
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "figbox"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
