opam-version: "2.0"
name: "satysfi-figbox"
version: "0.1.0"
synopsis: "A SATySFi package for creating charts and placing them in inappropriate positions"
description: """
A SATySFi package that creates charts and places them in inappropriate positions in your document
"""
maintainer: "Mogami Shinichi <mogassy@yahoo.co.jp>"
authors: "Mogami Shinichi <mogassy@yahoo.co.jp>"
license: "MIT" # Choose what you want
homepage: "https://github.com/monaqa/satysfi-figbox"
dev-repo: "git+https://github.com/monaqa/satysfi-figbox.git"
bug-reports: "https://github.com/monaqa/satysfi-figbox/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
  "satysfi-base"
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "figbox"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
